src/snapshots/ruff__linter__tests__W292_W292_0.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: NoNewLineAtEndOfFile
  location:
    row: 2
    column: 9
  end_location:
    row: 2
    column: 9
  fix: ~

