src/snapshots/ruff__linter__tests__W292_W292_0.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  def fn() -> None:
|     pass
|> No newline at end of file

