src/snapshots/ruff__linter__tests__X002_X002.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    AmbiguousUnicodeCharacterDocstring:
      - ）
      - )
  location:
    row: 5
    column: 53
  end_location:
    row: 5
    column: 54
  fix:
    patch:
      content: )
      location:
        row: 5
        column: 53
      end_location:
        row: 5
        column: 54
    applied: false

