src/snapshots/ruff__linter__tests__YTT101_YTT101.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: SysVersionSlice3Referenced
  location:
    row: 6
    column: 6
  end_location:
    row: 6
    column: 17
  fix: ~
- kind: SysVersionSlice3Referenced
  location:
    row: 7
    column: 6
  end_location:
    row: 7
    column: 13
  fix: ~

